# employment-scheduler

./: .gitignore  AGENTS.md  README.md  pyproject.toml
migrations/: 001_init.sql
scripts/: analyze_apply_urls.py  collect_today.py  publish.py  publish_apply_url_reports.py
src/employment_scheduler/: __init__.py  cli.py  models.py  normalization.py
src/employment_scheduler/analysis/: __init__.py  codex_apply_urls.py  constants.py  models.py  prompts.py  publish_reports.py  repository.py
src/employment_scheduler/analysis/repository/: analyze_repo.py  publish_repo.py
src/employment_scheduler/analysis/service/: codex_apply_urls.py  publish_reports.py
src/employment_scheduler/analysis/utils/: cli_utils.py  report_paths.py
src/employment_scheduler/collection/: __init__.py  cli.py  runner.py
src/employment_scheduler/notion/: __init__.py  client.py
src/employment_scheduler/sources/: __init__.py  inthiswork.py
src/employment_scheduler/storage/: __init__.py  database.py  models.py
tests/: test_codex_apply_url_analysis.py  test_database_storage.py  test_inthiswork.py  test_publish_apply_url_reports.py  test_runner.py  test_smoke.py
