[project]
name = "employment-scheduler"
version = "0.1.0"
description = "Local CLI pipeline for collecting employment posts."
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4",
  "httpx",
  "python-dotenv",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
